--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="blood">
 <div class="container">
         <header class="header">
             <a href="/" class="link">
@@ -39,9 +39,21 @@
                 <img src="img/Venom 2.svg" alt="" class="film-logo">
                 <p class="about">В настырном журналисте по-прежнему живет симбиот. <br>Том Харди в образе обаятельного суперзлодея <br> из комиксов Marvel.</p>
             </div>
+            <div class="button-group">
+                <button class="button button-primary">
+                    <img width="15px" src="img/play.svg" alt="" class="button-img">
+                    <span class="button-text">смотреть трейлер</span>
+                </button>
+                <a href="trailer.html" class="button button-link">
+                    <img width="15px" src="img/ticket.svg" alt="" class="button-img">
+                    <span class="button-text">билеты на премьеру</span>
+                </a>
+            </div>
+            <!-- /.button-group -->
         </div>
         <!-- /.hero -->
 </div>
 <!-- /.container -->
+<img src="img/Venom.png" alt="" class="venom">
 </body>
 </html>
