--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Веном 2 - в кино</title>
+    <title>Главная - Веном 2</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
@@ -19,16 +19,16 @@
             <nav class="nav">
                 <ul class="nav-menu">
                     <li class="nav-menu-item">
-                        <a href="info.html/" class="nav-menu-link">О фильме</a>
+                        <a href="info.html" class="nav-menu-link">О фильме</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="trailer.html/" class="nav-menu-link">Трейлер</a>
+                        <a href="trailer.html" class="nav-menu-link">Трейлер</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="actors.html/" class="nav-menu-link">Актёры</a>
+                        <a href="actors.html" class="nav-menu-link">Актёры</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="premier.html/" class="nav-menu-link">Премьера</a>
+                        <a href="premier.html" class="nav-menu-link">Премьера</a>
                     </li>
                 </ul>
             </nav>
