--- a/info.html
+++ b/info.html
@@ -13,22 +13,22 @@
 <body class="bg-info">
 <div class="container">
         <header class="header">
-            <a href="/" class="link">
+            <a href="index.html" class="link">
                 <img width="46" height="71" src="img/logo.png" alt="" class="logo-img">
             </a>
             <nav class="nav">
                 <ul class="nav-menu">
                     <li class="nav-menu-item">
-                        <a href="info.html/" class="nav-menu-link">О фильме</a>
+                        <a href="info.html" class="nav-menu-link">О фильме</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="trailer.html/" class="nav-menu-link">Трейлер</a>
+                        <a href="trailer.html" class="nav-menu-link">Трейлер</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="actors.html/" class="nav-menu-link">Актёры</a>
+                        <a href="actors.html" class="nav-menu-link">Актёры</a>
                     </li>
                     <li class="nav-menu-item">
-                        <a href="premier.html/" class="nav-menu-link">Премьера</a>
+                        <a href="premier.html" class="nav-menu-link">Премьера</a>
                     </li>
                 </ul>
             </nav>
